tests/errors/macro/parser_define_incorrect_ident_name/incorrect_2nd_symbol.c
#define f-rf 2 - 54

int main()
{
	return 0;
}
